migrate contributors into parties