@@ -11,6 +11,7 @@ import javax.servlet.http.HttpSession;
 import net.sourceforge.fenixedu.applicationTier.IUserView;
 import net.sourceforge.fenixedu.applicationTier.Servico.exceptions.ExistingServiceException;
 import net.sourceforge.fenixedu.dataTransferObject.InfoContributor;
+import net.sourceforge.fenixedu.dataTransferObject.InfoContributor.ContributorType;
 import net.sourceforge.fenixedu.framework.factory.ServiceManagerServiceFactory;
 import net.sourceforge.fenixedu.presentationTier.Action.exceptions.ExistingActionException;
 import net.sourceforge.fenixedu.presentationTier.Action.sop.utils.SessionConstants;
@@ -27,13 +28,10 @@ import org.apache.struts.actions.DispatchAction;
  * 
  * @author Nuno Nunes (nmsn@rnl.ist.utl.pt) Joana Mota (jccm@rnl.ist.utl.pt)
  * 
- * This is the Action to create a Contributor
- *  
  */
 public class CreateContributorDispatchAction extends DispatchAction {
 
-    public ActionForward prepare(ActionMapping mapping, ActionForm form, HttpServletRequest request,
-            HttpServletResponse response) throws Exception {
+    public ActionForward prepare(ActionMapping mapping, ActionForm form, HttpServletRequest request, HttpServletResponse response) throws Exception {
 
         HttpSession session = request.getSession(false);
 
@@ -43,6 +41,12 @@ public class CreateContributorDispatchAction extends DispatchAction {
             createContributorForm.set("contributorNumber", null);
             createContributorForm.set("contributorName", null);
             createContributorForm.set("contributorAddress", null);
+            createContributorForm.set("areaCode", null);
+            createContributorForm.set("areaOfAreaCode", null);
+            createContributorForm.set("area", null);
+            createContributorForm.set("parishOfResidence", null);
+            createContributorForm.set("districtSubdivisionOfResidence", null);
+            createContributorForm.set("districtOfResidence", null);
 
             return mapping.findForward("PrepareReady");
         }
@@ -50,39 +54,55 @@ public class CreateContributorDispatchAction extends DispatchAction {
 
     }
 
-    public ActionForward create(ActionMapping mapping, ActionForm form, HttpServletRequest request,
-            HttpServletResponse response) throws Exception {
+    public ActionForward create(ActionMapping mapping, ActionForm form, HttpServletRequest request, HttpServletResponse response) throws Exception {
 
         HttpSession session = request.getSession(false);
 
         if (session != null) {
-
             DynaActionForm createContributorForm = (DynaActionForm) form;
-
             IUserView userView = (IUserView) session.getAttribute(SessionConstants.U_VIEW);
 
-            // Get the Information
-            Integer contributorNumber = new Integer((String) createContributorForm
-                    .get("contributorNumber"));
-            String contributorName = (String) createContributorForm.get("contributorName");
-            String contributorAddress = (String) createContributorForm.get("contributorAddress");
+            final String contributorName = (String) createContributorForm.get("contributorName");
+            try {
+                Integer.valueOf((String) createContributorForm.get("contributorName"));    
 
-            if (contributorNumber.equals(new Integer(0))) {
                 ActionErrors errors = new ActionErrors();
-                errors.add("error.invalid.contributorNumber", new ActionError(
-                        "error.invalid.contributorNumber"));
+                errors.add("error.invalid.contributorName", new ActionError("error.invalid.contributorName"));
+                saveErrors(request, errors);
+                return mapping.getInputForward();
+            } catch (NumberFormatException e) {
+                // do nothing, name is not a number, it's correct
+            }
+            
+            Integer contributorNumber = null;
+            try {
+                contributorNumber = Integer.valueOf((String) createContributorForm.get("contributorNumber"));    
+                if (contributorNumber.intValue() == 0) {
+                    ActionErrors errors = new ActionErrors();
+                    errors.add("error.invalid.contributorNumber", new ActionError("error.invalid.contributorNumber"));
+                    saveErrors(request, errors);
+                    return mapping.getInputForward();
+                }
+            } catch (NumberFormatException e) {
+                ActionErrors errors = new ActionErrors();
+                errors.add("error.invalid.contributorNumber", new ActionError("error.invalid.contributorNumber"));
                 saveErrors(request, errors);
                 return mapping.getInputForward();
             }
 
-            // Create the new Contributor
             InfoContributor infoContributor = new InfoContributor();
-            infoContributor.setContributorNumber(contributorNumber);
+            infoContributor.setContributorType(ContributorType.valueOf((String) createContributorForm.get("contributorType")));
             infoContributor.setContributorName(contributorName);
-            infoContributor.setContributorAddress(contributorAddress);
+            infoContributor.setContributorNumber(contributorNumber.toString());
+            infoContributor.setContributorAddress((String) createContributorForm.get("contributorAddress"));
+            infoContributor.setAreaCode((String) createContributorForm.get("areaCode"));
+            infoContributor.setAreaOfAreaCode((String) createContributorForm.get("areaOfAreaCode"));
+            infoContributor.setArea((String) createContributorForm.get("area"));
+            infoContributor.setParishOfResidence((String) createContributorForm.get("parishOfResidence"));
+            infoContributor.setDistrictSubdivisionOfResidence((String) createContributorForm.get("districtSubdivisionOfResidence"));
+            infoContributor.setDistrictOfResidence((String) createContributorForm.get("districtOfResidence"));
 
             Object args[] = { infoContributor };
-
             try {
                 ServiceManagerServiceFactory.executeService(userView, "CreateContributor", args);
             } catch (ExistingServiceException e) {
